align correction

--- a/BlogCard/style.css
+++ b/BlogCard/style.css
@@ -17,7 +17,12 @@
 body{
     background-color: var(--yellow);
     font-family: "Figtree";
-}
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
 section{
     text-align: center;
